--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -317,6 +317,11 @@ Since the two low field states that get accessed sequentially have two different
 The magnetic configuration of the four extremal states is displayed in panel (h) of the same figure, showcasing the rotational motion of the spins inside the chain most parallel to the applied magnetic field, and the Gd ions coupled most strongly with it.
 This robust one directional rotation allows us to assign a non-zero winding number to the `magic-angle' switching behavior, i.e. $Q=\frac{1}{2\pi}\int_0^{T_0} dt (L_x\partial_t L_y - L_y \partial_t L_x)$. 
 
+\begin{figure}[h]
+	\IncludeGraphics{spin_configs}
+\end{figure}
+
+
 \section{Simplified Model}
 Having found a description for the situation in the complicated material GdMn$_2$O$_5$ using the model \ref{eq:GdMn2O5_1}, one may wonder what the minimal requirements are to have a similar four-state behavior where the spins rotate 360$^\circ$ while the applied field only oscillates back and forth along a single axis.
 We look to the spin configurations of Fig.~\ref{fig:GdMn2O5_theory}(h) for inspiration.
