start work on BTO

--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -67,8 +67,8 @@
 % \chapter{Charge order and spin-momentum locking in high spin-orbit coupled ferroelectrics}
 % \Include{Rashba}
 % \Include{Cr}
-\Include{GdMn2O5}
-% \Include{Softening}
+% \Include{GdMn2O5}
+\Include{Softening}
 % \chapter{Strong coupling and ultrafast control of charge and spin density waves in elemental Chromium}
 % \subfile{chapters/chromium_sdw_cdw.tex}
 \end{document}
