--- a/papers/Softening/Softening.tex
+++ b/papers/Softening/Softening.tex
@@ -2,6 +2,34 @@
 
 
 \section{Introduction}
+So far, the focus of this work was largely on the behavior of various orders in uniform domains, and how they interact with eachother.
+A thorough understanding of these physics is of fundamental importance, since this provides the building blocks for more complex scenarios.
+Reality, however, presents to us almost exclusively these more complex scenarios.
+The reason for this is that while going through a phase transition with an associated spontaneous symmetry breaking, different parts of the material which are separated in space will separately (and usually randomly), choose one of the degenerate states with different values of the order parameters.
+One could argue that second order phase transitions could happen coherently throughout the entire system, but this assumes that the crystals are completely uniform and without defects, and that the temperature variation happens at an infinitely slow rate.
+In reality these assumptions are almost always invalid, inevitably leading to domains separated by domain walls (DWs) in which one or more order parameters interpolate between the values in the neighboring domains.
+The fundamental difference between DWs and the domains themselves has led to a great amount of research interest, both from the fundamental and technological point of view.
+The latter can be attributed to the small size and the fact that their location can usually be controlled easily.
+One example are conducting DWs in a ferroelectric materials, which have are bulk insulators.
+However, sandwiching a ferroelectric that harbors these walls between two conducting plates allows for creating these DWs by applying electric fields.
+When more conducting DWs are present, current will flow more easily through the material.
+This fact can be exploited to efficiently store and read information.
+A lot of research has been focused on the functionality that DWs present, but less is known about their mechanical properties.
+It has been shown that ferroelectric-ferroelastic (ferroelastic walls separate domains with differing strain textures) DWs can be moved by applying stress \cite{Schneider2001}.
+While the influence of stress on these ferroelectric-ferroelastic DWs has been investigated theoretically \cite{Sal, it 
+\lp{maybe some more examples etc?}
+
+% From the fundamental point of view, they offer a nanoscale region in which there is a sharp change in the microscopic configuration of the system.
+While domain walls offer an extremely rich behavior in the case of multiferroics, and hold the key to use these promising materials in spintronics applications \cite{Lee2014}, here we focus on domain walls in the classic ferroelectric BaTiO$_3$ (BTO).   
+
+
+
+In the previous chapter, the focus was largely on the multiferroic behavior of uniform domains. While the research towards greater understanding of this topic is fundamental to further the field, the usability in spintronics applications is difficult.
+A key reason for this is the fact that multiferroics are almost exclusively insulators with relatively wide band gaps.
+For most technological applications, some current has to be able to pass through the device in order to transfer, probe and process information.
+As such, domain walls have taken center stage in the search for usable multiferroic devices, since even though the domains the separate are non-conductive, their different internal configuration can allow for current to flow through.
+
+
 The study of domain walls in ferroelectric and ferroelastic materials has taken the center stage in recent years. This is because they signify crossover regions between domains where the parent symmetry of the material was broken. These regions therefore often harbor effects that are markedly different from the behaviors found in the domains themselves. Here we investigate mainly 180$^\circ$ domain walls in ferroelectric BaTiO$_3$ (BTO).
 These domain walls are purely ferroelectric, i.e. the strain textures accompanying the ferroelectricity (see below for a more in depth discussion) is the same in both domains, separated by the wall. Given this fact it is fairly remarkable that it was observed that these walls are mechanically distinct from the domains they separate. In the case of BTO, they appear softer.
 After giving an overview of the performed experiments and the results we are trying to describe, we continue with a discription of the underlying theory, followed by the numerical results together with a discussion.
