--- a/papers/Softening/bib.bib
+++ b/papers/Softening/bib.bib
@@ -767,3 +767,29 @@ year = {2003}
 
 @Comment{jabref-meta: databaseType:bibtex;}
 
+@article{Lee2014,
+author = {Lee, Ji Hye and Fina, Ignasi and Marti, Xavi and Kim, Young Heon and Hesse, Dietrich and Alexe, Marin},
+doi = {10.1002/adma.201402558},
+file = {:home/ponet/Downloads/adma.201402558.pdf:pdf},
+issn = {15214095},
+journal = {Advanced Materials},
+mendeley-groups = {PhD Thesis/Softening},
+number = {41},
+pages = {7078--7082},
+title = {{Spintronic functionality of BiFeO3 domain walls}},
+volume = {26},
+year = {2014}
+}
+
+@article{Schneider2001,
+author = {Schneider, G A and Eng, L M},
+file = {:home/ponet/Downloads/s0039-6028(01)00992-x.pdf:pdf},
+keywords = {ect,growth,nucleation,piezoelectric e,single crystal surfaces,surface stress},
+mendeley-groups = {PhD Thesis/Softening},
+pages = {1--9},
+title = {{Stress-induced movement of ferroelastic domain walls in BaTiO3 using AFM}},
+url = {papers://2973f1d5-d696-469c-80fa-0e7ffe9241d4/Paper/p1874},
+volume = {480},
+year = {2001}
+}
+
